spring ecomm allmapping restapi